# probatio

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_POLICY.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  cspell.json  justfile  pyproject.toml
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yaml
.github/workflows/: clusterfuzzlite.yaml  codeql.yaml  codspeed.yaml  dependency-review.yaml  docs.yaml  fuzz.yaml  labels.yaml  linting.yaml  lock.yaml  pr-labels.yaml  release-drafter.yaml  release.yaml  scorecard.yaml  tests.yaml  typing.yaml
adr/: 001-clean-room-reimplementation-of-voluptuous.md  002-mit-license.md  003-astro-starlight-for-documentation.md  004-single-validation-engine.md  005-pure-python-no-required-dependencies.md  006-python-support-floor.md  007-self-validation-protocol.md  008-type-to-validator-registry.md  009-call-time-validation-context.md  010-mypyc-accelerated-build.md  011-opt-in-compiled-schema.md  012-trusted-construction-without-validation.md  013-markers-on-annotated-fields.md  014-annotation-driven-argument-decorator.md  015-structured-errors-and-localization.md  016-remove-serde-loaders-and-dumpers.md  017-numeric-tower-for-float.md  README.md
bench/: bench.py  bench_dataclass.py  bench_world.py  charts.py  profiling.py  test_benchmarks.py
compat/home_assistant/: README.md  probatio_vol_swap.py
compat/voluptuous/: README.md  conftest.py
docs/: README.md  astro.config.mjs  package-lock.json  package.json  verify_examples.py
docs/public/: _headers
docs/src/components/: Footer.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/getting-started/: compatibility.md  installation.mdx  migrating-from-voluptuous.md  quick-start.md
docs/src/content/docs/guides/: combinators.md  compiled-schemas.md  custom-error-messages.md  custom-validators.md  dataclasses.md  dict-schemas-and-markers.md  error-handling.md  field-lists.md  json-schema-and-openapi.md  json-schema.md  lazy-building.md  loading-and-dumping.md  openapi.md  probatio-decorator.md  recursive-schemas.md  sequence-schemas.md  testing-with-pytest.md  troubleshooting.md  typeddict.md  validation-model.md  validators.md
docs/src/content/docs/project/: about.md  architecture.md  comparison.md  credits.md  license.md  projects.md  roadmap.md  security.md
docs/src/content/docs/recipes/: config-file.md  cookbook.md  home-assistant.md  llm-tools.md  web-api.md
docs/src/content/docs/reference/: builtins-by-role.md  compatibility-matrix.md  errors.md  index.md  performance.md  translation-keys.md  typing.md
docs/src/plugins/: rehype-probatio.mjs
docs/src/styles/: custom.css
fuzz/: fuzz_from_json_schema.py  fuzz_is_catastrophic.py  fuzz_schema.py  fuzz_serde.py
scripts/: build_accelerated.py
src/probatio/: __init__.py  _build_policy.py  _codegen.py  _compile.py  _compile_policy.py  _engine.py  _messages.py  _overlay.py  _type_registry.py  dataclass_schema.py  decorator.py  error.py  fields.py  humanize.py  markers.py  model.py  schema.py
src/probatio/_vol_shim/: __init__.py  _reexport.py  _surface.py  error.py  schema_builder.py  util.py  validators.py
src/probatio/codecs/: __init__.py  _regex_safety.py  _shared.py  fields.py  jsonschema.py  openapi.py
src/probatio/compat/: __init__.py
src/probatio/serde/: __init__.py  _config.py  _optional.py  dumpers.py  loaders.py
src/probatio/validators/: __init__.py  _base.py  coerce.py  combinators.py  comparison.py  conditional.py  decorators.py  encoding.py  formats.py  identifiers.py  network.py  predicates.py  secret.py  strings.py  structural.py  temporal.py  transition.py
tests/: conftest.py  strategies.py  test_alias.py  test_codegen.py  test_compat.py  test_compile_policy.py  test_conformance.py  test_context.py  test_dataclass_schema.py  test_decorator.py  test_enum.py  test_error.py  test_extend.py  test_fidelity.py  test_forbidden.py  test_fuzz_engine.py  test_groups.py  test_humanize.py  test_humanize_snapshots.py  test_lazy_build.py  test_mapping.py  test_markers.py  test_memory.py  test_messages.py  test_model.py  test_numeric_tower.py  test_object.py  test_public_surface.py  test_schema.py  test_security.py  test_self.py  test_self_validation.py  test_sequence.py  test_type_registry.py  test_typeddict_schema.py  test_v0_16.py  test_version.py
tests/__snapshots__/: test_humanize_snapshots.ambr  test_public_surface.ambr
tests/codecs/: test_encoder_differential.py  test_fields.py  test_from_json_schema.py  test_from_openapi.py  test_fuzz_codecs.py  test_fuzz_roundtrip.py  test_jsonschema.py  test_jsonschema_snapshots.py  test_openapi.py  test_openapi_oracle.py
tests/codecs/__snapshots__/: test_jsonschema_snapshots.ambr
tests/serde/: test_config.py  test_dumpers.py  test_loaders.py
tests/validators/: test_coerce.py  test_combinators.py  test_comparison.py  test_conditional.py  test_decorators.py  test_encoding.py  test_formats.py  test_fuzz_new_validators.py  test_identifiers.py  test_network.py  test_predicates.py  test_repr.py  test_safe_contract.py  test_secret.py  test_strings.py  test_structural.py  test_temporal.py  test_transition.py
